--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/UnfazedAy/alx-backend-javascript#readme",
   "dependencies": {
+    "chai": "^4.3.7",
     "mocha": "^10.2.0"
   }
 }
