There's an issue, but I want to sleep first.

--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/UnfazedAy/alx-backend-javascript#readme",
   "dependencies": {
     "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "sinon": "^15.0.2"
   }
 }
