--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "request": "^2.88.2",
     "sinon": "^15.0.2",
     "stub": "^0.3.2"
   }
